istio-teaching/gateway-api/v1alpha2/udproute/deploy-udp-listener.yaml
apiVersion: v1
kind: Service
metadata:
  name: udp-listener
spec:
  ports:
  - name: udp-listener
    port: 5005
  selector:
    app: udp-listener
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udp-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udp-listener
  template:
    metadata:
      labels:
        app: udp-listener
    spec:
      containers:
      - name: udp-listener
        image: mendhak/udp-listener
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5005
