istio-teaching/gateway-api/v1alpha2/udproute/gw-listeners-protocol-UDP.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: udp
spec:
  addresses:
  - value: istio-ingressgateway.istio-system.svc.cluster.local
    type: Hostname
  gatewayClassName: istio
  listeners:
  - protocol: UDP
    port: 15449
    name: gw-udp
    allowedRoutes:
      namespaces:
        from: All
